# ReadTheYaml

./: .gitignore  README.md  TODO.md  main.py  main_editor.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: README.md  composite.md  conditions.md  editor.md  index.md  object.md  primitives.md  schema-and-instance.md  schema-lifecycle.md  schema-references-and-subschemas.md
examples/: config.yaml  config_all_types.yaml  config_composed.yaml  schema.yaml  schema_all_types.yaml  schema_composed.yaml  schema_ref.yaml  valid_config.yaml
examples/sections/: deployment.yaml  network.yaml  observability.yaml  runtime.yaml
examples/shared/: logging.yaml  server.yaml  test.yaml
readtheyaml/: conditions.py  data_instance.py  editor.py  fields.py  schema.py  schema_doc.py  sections.py
readtheyaml/exceptions/: base_error.py  format_error.py  validation_error.py
readtheyaml/fields/: any_field.py  bool_field.py  field.py  field_factory.py  field_helpers.py  field_registery.py  field_registry.py  field_validation_helpers.py  list_field.py  numerical_field.py  object_field.py  string_field.py  tuple_field.py  union_field.py
readtheyaml/structure/: schema.py  sections.py
structure/: fields.py  schema.py  sections.py
tests/: conftest.py  test_composite_fields.py  test_conditions.py  test_data_instance.py  test_editor.py  test_fields.py  test_form_renderer.py  test_object_fields.py  test_schema.py  test_schema_doc.py  test_schema_introspect.py  test_ui_save_helpers.py  test_ui_validation.py  test_ui_widgets.py  todos.txt
(+62 files in other folders)
