[project]
name = "ReadTheYaml"
version = "1.2.0"
description = "Validate and document your YAML config files — so future-you doesn't have to guess."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Vincent Martineau", email = "vincent.martineau.1@ulaval.ca" }
]
dependencies = [
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/TheRealMarVin/readtheyaml"
Repository = "https://github.com/TheRealMarVin/readtheyaml"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
